--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 18:05:04 2018</p>
+         Last Run: Mon Oct 29 19:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Oct 30, 2018 -  8:15PM til  9:45PM</H4>
                <table class="table table-striped">
@@ -31,26 +31,26 @@
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>4</td>
-                        <td>1</td>
+                        <td>3</td>
                         <td>0</td>
-                        <td>49</td>
+                        <td>0</td>
+                        <td>50</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>17</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>3</td>
-                        <td>0</td>
+                        <td>2</td>
+                        <td>-1</td>
                         <td>1</td>
-                        <td>53</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>17</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>56</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>18</td>
+                        <td>12</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,8 +89,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "1",
                  "0",
+                 "-1",
                  "-1"
                ]
              },
@@ -101,8 +101,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "4",
                  "3",
+                 "2",
                  "2"
                ]
              }
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "49",
-                 "53",
-                 "56"
+                 "50",
+                 "54",
+                 "57"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "17",
-                 "17",
-                 "18"
+                 "9",
+                 "11",
+                 "12"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 18:05:04 2018</p>
+         Last Run: Mon Oct 29 19:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -258,10 +258,10 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Overcast</td>
-                        <td>2</td>
-                        <td>-1</td>
+                        <td>1</td>
+                        <td>-2</td>
                         <td>6</td>
-                        <td>76</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -270,8 +270,8 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Overcast</td>
-                        <td>3</td>
-                        <td>0</td>
+                        <td>2</td>
+                        <td>-1</td>
                         <td>4</td>
                         <td>69</td>
                         <td>0</td>
@@ -305,8 +305,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-3",
-                 "-1",
-                 "0"
+                 "-2",
+                 "-1"
                ]
              },
              {
@@ -317,8 +317,8 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "0",
-                 "2",
-                 "3"
+                 "1",
+                 "2"
                ]
              }
            ]
@@ -387,7 +387,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "85",
-                 "76",
+                 "75",
                  "69"
                ]
              },
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 18:05:04 2018</p>
+         Last Run: Mon Oct 29 19:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -460,39 +460,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Chance of Rain</td>
                         <td>5</td>
                         <td>2</td>
-                        <td>24</td>
-                        <td>61</td>
-                        <td>1</td>
-                        <td>13</td>
-                        <td>NW</td>
-                        <td>81</td>
-                     </tr>
-                     <tr>
-                        <td>01:00 PM</td>
-                        <td>Overcast</td>
-                        <td>5</td>
-                        <td>2</td>
-                        <td>24</td>
-                        <td>60</td>
-                        <td>1</td>
-                        <td>13</td>
-                        <td>NNW</td>
-                        <td>86</td>
-                     </tr>
-                     <tr>
-                        <td>02:00 PM</td>
-                        <td>Overcast</td>
-                        <td>6</td>
-                        <td>4</td>
-                        <td>24</td>
-                        <td>59</td>
+                        <td>33</td>
+                        <td>62</td>
                         <td>1</td>
                         <td>11</td>
                         <td>NW</td>
-                        <td>86</td>
+                        <td>90</td>
+                     </tr>
+                     <tr>
+                        <td>01:00 PM</td>
+                        <td>Chance of Rain</td>
+                        <td>5</td>
+                        <td>2</td>
+                        <td>32</td>
+                        <td>60</td>
+                        <td>1</td>
+                        <td>11</td>
+                        <td>NNW</td>
+                        <td>90</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Chance of Rain</td>
+                        <td>6</td>
+                        <td>4</td>
+                        <td>30</td>
+                        <td>58</td>
+                        <td>1</td>
+                        <td>11</td>
+                        <td>NNW</td>
+                        <td>87</td>
                      </tr>
                   </tbody>
                </table>
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
-                 "24",
-                 "24"
+                 "33",
+                 "32",
+                 "30"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "61",
+                 "62",
                  "60",
-                 "59"
+                 "58"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "81",
-                 "86",
-                 "86"
+                 "90",
+                 "90",
+                 "87"
                ]
              }
            ]
