--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 19:05:03 2018</p>
+         Last Run: Mon Oct 29 20:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Oct 30, 2018 -  8:15PM til  9:45PM</H4>
                <table class="table table-striped">
@@ -31,8 +31,8 @@
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>3</td>
-                        <td>0</td>
+                        <td>4</td>
+                        <td>1</td>
                         <td>0</td>
                         <td>50</td>
                         <td>0</td>
@@ -43,10 +43,10 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>2</td>
-                        <td>-1</td>
+                        <td>3</td>
+                        <td>0</td>
                         <td>1</td>
-                        <td>54</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
@@ -58,7 +58,7 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>57</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
@@ -89,8 +89,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "1",
                  "0",
-                 "-1",
                  "-1"
                ]
              },
@@ -101,8 +101,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "4",
                  "3",
-                 "2",
                  "2"
                ]
              }
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "50",
-                 "54",
-                 "57"
+                 "53",
+                 "56"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 19:05:03 2018</p>
+         Last Run: Mon Oct 29 20:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -249,11 +249,11 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>7</td>
-                        <td>85</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
-                        <td>91</td>
+                        <td>WNW</td>
+                        <td>90</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -261,10 +261,10 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>6</td>
-                        <td>75</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>WSW</td>
+                        <td>W</td>
                         <td>91</td>
                      </tr>
                      <tr>
@@ -273,11 +273,11 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>4</td>
-                        <td>69</td>
+                        <td>68</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>SW</td>
-                        <td>92</td>
+                        <td>10</td>
+                        <td>SSW</td>
+                        <td>91</td>
                      </tr>
                   </tbody>
                </table>
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "85",
-                 "75",
-                 "69"
+                 "83",
+                 "74",
+                 "68"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "90",
                  "91",
-                 "91",
-                 "92"
+                 "91"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 19:05:03 2018</p>
+         Last Run: Mon Oct 29 20:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -463,34 +463,34 @@
                         <td>Chance of Rain</td>
                         <td>5</td>
                         <td>2</td>
-                        <td>33</td>
-                        <td>62</td>
+                        <td>32</td>
+                        <td>61</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>NW</td>
-                        <td>90</td>
+                        <td>NNW</td>
+                        <td>91</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>5</td>
-                        <td>2</td>
+                        <td>3</td>
                         <td>32</td>
-                        <td>60</td>
+                        <td>59</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NNW</td>
-                        <td>90</td>
+                        <td>89</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>6</td>
                         <td>4</td>
-                        <td>30</td>
+                        <td>31</td>
                         <td>58</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NNW</td>
                         <td>87</td>
                      </tr>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "2",
-                 "2",
+                 "3",
                  "4"
                ]
              },
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "33",
                  "32",
-                 "30"
+                 "32",
+                 "31"
                ]
              },
              {
@@ -601,8 +601,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "62",
-                 "60",
+                 "61",
+                 "59",
                  "58"
                ]
              },
@@ -612,8 +612,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "90",
-                 "90",
+                 "91",
+                 "89",
                  "87"
                ]
              }
