--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 21:05:03 2018</p>
+         Last Run: Mon Oct 29 22:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Oct 30, 2018 -  8:15PM til  9:45PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>4</td>
                         <td>1</td>
                         <td>0</td>
-                        <td>49</td>
+                        <td>50</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
@@ -43,10 +43,10 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>3</td>
-                        <td>0</td>
+                        <td>2</td>
+                        <td>-1</td>
                         <td>1</td>
-                        <td>53</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "1",
-                 "0",
+                 "-1",
                  "-1"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "4",
-                 "3",
+                 "2",
                  "2"
                ]
              }
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "49",
-                 "53",
+                 "50",
+                 "54",
                  "56"
                ]
              },
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 21:05:03 2018</p>
+         Last Run: Mon Oct 29 22:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -252,7 +252,7 @@
                         <td>83</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WNW</td>
+                        <td>W</td>
                         <td>90</td>
                      </tr>
                      <tr>
@@ -261,11 +261,11 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>6</td>
-                        <td>74</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>W</td>
-                        <td>90</td>
+                        <td>WSW</td>
+                        <td>91</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -387,7 +387,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "83",
-                 "74",
+                 "75",
                  "68"
                ]
              },
@@ -398,7 +398,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "90",
-                 "90",
+                 "91",
                  "91"
                ]
              }
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 21:05:03 2018</p>
+         Last Run: Mon Oct 29 22:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -463,8 +463,8 @@
                         <td>Chance of Rain</td>
                         <td>5</td>
                         <td>2</td>
-                        <td>33</td>
-                        <td>61</td>
+                        <td>34</td>
+                        <td>62</td>
                         <td>1</td>
                         <td>11</td>
                         <td>NNW</td>
@@ -475,7 +475,7 @@
                         <td>Chance of Rain</td>
                         <td>5</td>
                         <td>3</td>
-                        <td>32</td>
+                        <td>33</td>
                         <td>59</td>
                         <td>1</td>
                         <td>10</td>
@@ -487,7 +487,7 @@
                         <td>Chance of Rain</td>
                         <td>6</td>
                         <td>4</td>
-                        <td>31</td>
+                        <td>32</td>
                         <td>58</td>
                         <td>1</td>
                         <td>10</td>
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "34",
                  "33",
-                 "32",
-                 "31"
+                 "32"
                ]
              },
              {
@@ -601,7 +601,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "61",
+                 "62",
                  "59",
                  "58"
                ]
