--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 22:05:02 2018</p>
+         Last Run: Mon Oct 29 23:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Oct 30, 2018 -  8:15PM til  9:45PM</H4>
                <table class="table table-striped">
@@ -34,23 +34,23 @@
                         <td>4</td>
                         <td>1</td>
                         <td>0</td>
-                        <td>50</td>
+                        <td>49</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>9</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>2</td>
-                        <td>-1</td>
+                        <td>3</td>
+                        <td>0</td>
                         <td>1</td>
                         <td>54</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>10</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>56</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>11</td>
+                        <td>8</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "1",
-                 "-1",
+                 "0",
                  "-1"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "4",
-                 "2",
+                 "3",
                  "2"
                ]
              }
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
+                 "49",
                  "54",
-                 "56"
+                 "57"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "9",
-                 "10",
-                 "11"
+                 "8",
+                 "8",
+                 "8"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 22:05:02 2018</p>
+         Last Run: Mon Oct 29 23:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -252,7 +252,7 @@
                         <td>83</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
+                        <td>WNW</td>
                         <td>90</td>
                      </tr>
                      <tr>
@@ -261,10 +261,10 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>6</td>
-                        <td>75</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>WSW</td>
+                        <td>W</td>
                         <td>91</td>
                      </tr>
                      <tr>
@@ -387,7 +387,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "83",
-                 "75",
+                 "74",
                  "68"
                ]
              },
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 22:05:02 2018</p>
+         Last Run: Mon Oct 29 23:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -476,7 +476,7 @@
                         <td>5</td>
                         <td>3</td>
                         <td>33</td>
-                        <td>59</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>10</td>
                         <td>NNW</td>
@@ -602,7 +602,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "62",
-                 "59",
+                 "60",
                  "58"
                ]
              },
