--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 23:05:02 2018</p>
+         Last Run: Tue Oct 30 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Oct 30, 2018 -  8:15PM til  9:45PM</H4>
                <table class="table table-striped">
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 23:05:02 2018</p>
+         Last Run: Tue Oct 30 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -245,39 +245,39 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Overcast</td>
+                        <td>Snow Showers</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>7</td>
-                        <td>83</td>
+                        <td>39</td>
+                        <td>85</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WNW</td>
-                        <td>90</td>
+                        <td>93</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Overcast</td>
+                        <td>Snow Showers</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>6</td>
-                        <td>74</td>
+                        <td>35</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>91</td>
+                        <td>93</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Overcast</td>
                         <td>2</td>
                         <td>-1</td>
-                        <td>4</td>
-                        <td>68</td>
+                        <td>21</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SSW</td>
-                        <td>91</td>
+                        <td>SW</td>
+                        <td>93</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
-                 "6",
-                 "4"
+                 "39",
+                 "35",
+                 "21"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "83",
-                 "74",
-                 "68"
+                 "85",
+                 "77",
+                 "71"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "90",
-                 "91",
-                 "91"
+                 "93",
+                 "93",
+                 "93"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 23:05:02 2018</p>
+         Last Run: Tue Oct 30 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -463,8 +463,8 @@
                         <td>Chance of Rain</td>
                         <td>5</td>
                         <td>2</td>
-                        <td>34</td>
-                        <td>62</td>
+                        <td>33</td>
+                        <td>61</td>
                         <td>1</td>
                         <td>11</td>
                         <td>NNW</td>
@@ -475,8 +475,8 @@
                         <td>Chance of Rain</td>
                         <td>5</td>
                         <td>3</td>
-                        <td>33</td>
-                        <td>60</td>
+                        <td>32</td>
+                        <td>59</td>
                         <td>1</td>
                         <td>10</td>
                         <td>NNW</td>
@@ -487,7 +487,7 @@
                         <td>Chance of Rain</td>
                         <td>6</td>
                         <td>4</td>
-                        <td>32</td>
+                        <td>31</td>
                         <td>58</td>
                         <td>1</td>
                         <td>10</td>
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "34",
                  "33",
-                 "32"
+                 "32",
+                 "31"
                ]
              },
              {
@@ -601,8 +601,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "62",
-                 "60",
+                 "61",
+                 "59",
                  "58"
                ]
              },
